...
      android:layout_width="0dp"
      android:layout_height="match_parent"
      android:layout_weight="1"
      android:layout_marginEnd="12dp"
      android:gravity="center_vertical">
    <EditText
        android:id="@+id/search_box_text"
        style="@style/TextAppearance.SearchBoxText.NewTabPage"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@null"
        android:ellipsize="end"
        android:focusable="false"
...
